# djingleshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
djingleshop/: .gitignore  README.md  manage.py
djingleshop/djingleshop/: .env  asgi.py  settings.py  urls.py  wsgi.py
djingleshop/djingleshop_shopping/: apps.py  forms.py  models.py  views.py
djingleshop/djingleshop_shopping/migrations/: 0001_initial.py  0002_alter_product_product_code.py  0003_alter_product_product_code.py  0004_alter_product_product_code.py  0005_alter_product_product_code.py
djingleshop/static/css/: style.css
djingleshop/static/js/: add_product.js  main.js
djingleshop/templates/: add_product.html  base.html  index.html  search.html
