[tool.poetry]
name = "djingle-shop"
version = "0.1.0"
description = ""
authors = ["Jalon Dodson <jalon.dodson@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
Pillow = "^8.2.0"
django-environ = "^0.4.5"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
